# kanban-tui

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yaml  flake.nix  kanban_tui.yaml  pyproject.toml  test_path
.github/workflows/: ci.yaml  coverage.yaml  publish.yaml  test.yaml
docs/: maintaining-nix-flake.md
images/: demo.tape
scripts/: maintain-nix-flake.sh
src/kanban_tui/: __init__.py  __main__.py  app.py  color_converter.py  config.py  constants.py  database.py  skills.py  utils.py
src/kanban_tui/assets/: SKILL.md  style.tcss
src/kanban_tui/backends/: __init__.py  auth.py  base.py
src/kanban_tui/backends/claude/: __init__.py  backend.py
src/kanban_tui/backends/jira/: auth.py  backend.py  jira_api.py  models.py
src/kanban_tui/backends/sqlite/: backend.py  database.py
src/kanban_tui/backends/sqlite/migrations/: __init__.py  migration_v0_13_0.sql  migration_v0_14_0.sql  migration_v0_15_0.sql  migration_v0_19_0.sql
src/kanban_tui/classes/: board.py  category.py  column.py  logevent.py  task.py
src/kanban_tui/cli/: __init__.py  board_commands.py  category_commands.py  column_commands.py  demo_commands.py  general_commands.py  mcp_commands.py  skills_commands.py  task_commands.py
src/kanban_tui/modal/: modal_auth_screen.py  modal_board_screen.py  modal_category_screen.py  modal_color_pick.py  modal_confirm_screen.py  modal_jira_board_screen.py  modal_jira_url_screen.py  modal_settings.py  modal_task_screen.py
src/kanban_tui/screens/: board_screen.py  overview_screen.py  settings_screen.py
src/kanban_tui/textual_datepicker/: __init__.py  _date_picker.py  _date_select.py
src/kanban_tui/views/: board_view.py  kanbanboard_tab_view.py  main_view.py  overview_tab_view.py  settings_tab_view.py  task_view.py
src/kanban_tui/widgets/: board_widgets.py  custom_footer.py  custom_widgets.py  date_select.py  filter_sidebar.py  modal_board_widgets.py  modal_task_widgets.py  overview_widgets.py  settings_widgets.py  task_card.py  task_column.py
tests/: conftest.py  test_cli.py  test_config.py  test_database.py  test_utils.py
tests/app_tests/: test_app.py  test_app_jira.py  test_board_screen.py  test_claude_backend_integration.py  test_kanbanboard_tab_view.py  test_overview_screen.py  test_overview_tab_view.py  test_settings_screen.py  test_settings_tab_view.py
tests/app_tests/modal/: test_modal_auth_screen.py  test_modal_board_screen.py  test_modal_category_screen.py  test_modal_task_dependencies.py  test_modal_task_screen.py
tests/backends/: test_auth.py  test_backends.py
tests/backends/claude/: __init__.py  test_claude_backend.py
tests/backends/jira/: test_auth.py  test_jira_backend.py
tests/backends/sqlite/: test_backend.py  test_database.py  test_migrations.py  test_sqlite_backend.py
tests/classes/: test_task.py
tests/cli/: test_board_commands.py  test_category_commands.py  test_cli.py  test_column_commands.py  test_general_commands.py  test_mcp_commands.py  test_skills_commands.py  test_task_commands.py
tests/sample-configs/: jira_backend.toml  new_theme.toml  not_existent_file.toml  sample_auth.toml  sqlite_backend.toml
tools/: create_dummy_tasks.py  seed.py
