[project]
name = "kanban-tui"
version = "0.12.0"
description = "customizable task tui powered by textual"
authors = [
    { name = "Zaloog", email = "gramslars@gmail.com" }
]
dependencies = [
    "click>=8.1.7",
    "textual-plotext>=1.0.0",
    "textual>=6.1.0",
    "tzdata>=2025.2",
    "python-dateutil>=2.9.0.post0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "tomli-w>=1.2.0",
    "xdg-base-dirs>=6.0.2",
    "textual-jumper>=0.2.0",
]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }

keywords = ["python", "textual", "tui", "kanban"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Repository = "https://github.com/Zaloog/kanban-tui"
Changelog = "https://github.com/Zaloog/kanban-tui/blob/main/CHANGELOG.md"

[project.scripts]
ktui = "kanban_tui.cli:cli"
kanban-tui = "kanban_tui.cli:cli"

[project.optional-dependencies]
web = [
    "textual-serve>=1.1.1",
]
jira = [
    "atlassian-python-api>=4.0.7",
]


[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-asyncio>=0.24.0",
    "textual-dev>=1.6.1",
    "freezegun>=1.5.1",
    "ruff>=0.13.1",
    "mypy>=1.18.2",
    "types-python-dateutil>=2.9.0.20250822",
    "prek>=0.2.25",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov src/kanban_tui --cov-report term-missing --verbose --color=yes -n auto"
testpaths = ["tests"]


[tool.mypy]
ignore_missing_imports = true
exclude = [
    "tests"
    ]
